--- a/ConsultGrupo4.html
+++ b/ConsultGrupo4.html
@@ -47,8 +47,8 @@ https://templatemo.com/tm-529-ramayana
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-12">
-                    <h1>Simple Page</h1>
-                    <p><strong>Ramayana</strong> is free Bootstrap 4 CSS template from templatemo website. You can feel free to use it. Donec a scelerisque massa. Aliquam non iaculis quam. Duis arcu turpis, tincidunt id convallis nec, pretium non sem. Fusce non vehicula nibh. Nunc interdum libero non tincidunt rutrum. Nunc at feugiat quam, sed ullamcorper felis.</p>
+                    <h1>Consultas y Exposiciones</h1>
+                    <p>En este espacio encontraras todo hacerca de las colcultas y exposiciones hechas por el grupo #4</p>
                   </div>
                 </div>
               </div>
@@ -61,8 +61,10 @@ https://templatemo.com/tm-529-ramayana
                   <div class="col-md-12">
                     <img src="assets/images/simple-post.jpg" alt="">
                     <div class="down-content">
-                      <p>Mauris aliquam ipsum nibh, id scelerisque leo congue vel. Vivamus ornare, eros et ornare consectetur, ipsum ipsum sollicitudin libero, at condimentum risus nulla non enim. Quisque sodales vestibulum arcu porttitor finibus. Phasellus dictum nisl id augue ornare, vel interdum nibh mollis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
-                      <p>Phasellus vestibulum venenatis interdum. Praesent augue massa, tincidunt eget dignissim a, scelerisque vitae ante. Curabitur a arcu tellus. Donec et massa at dolor condimentum ornare nec non lorem. Maecenas non egestas metus, sed ultricies lectus. Aliquam sit amet gravida tellus. Phasellus id erat nec mi ullamcorper viverra. Quisque vitae pharetra sem. Maecenas sit amet velit ultrices, malesuada quam id, porta nisl. Cras scelerisque ex ut bibendum egestas.</p>
+                      <h1>Exposicion y consulta #1: Expresiones Lambda </h1>
+			    <p> La expresión lambda es una nueva característica que se introdujo en Java 8.</p>
+			    <p> En el ambito de la programacion, una expresion Lambda, tambien denominada funcion lambda, funcion anonima o funcion literal es una subrutina definida que no esta enlazada a un decodificador.</p>
+			    <p> Una expresión lambda es una función anónima. Una función que no tiene nombre y no pertenece a ninguna clase. </p>
                     </div>
                   </div>
                 </div>
