--- a/ConsultGrupo4.html
+++ b/ConsultGrupo4.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-529-ramayana
             <!-- Header -->
             <header id="header">
               <div class="logo">
-                <a href="index.html">Ramayana</a>
+                <a href="index.html">Consultas y Exposiciones</a>
               </div>
             </header>
 
@@ -59,12 +59,14 @@ https://templatemo.com/tm-529-ramayana
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-12">
-                    <img src="assets/images/simple-post.jpg" alt="">
                     <div class="down-content">
                       <h1>Exposicion y consulta #1: Expresiones Lambda </h1>
 			    <p> La expresión lambda es una nueva característica que se introdujo en Java 8.</p>
 			    <p> En el ambito de la programacion, una expresion Lambda, tambien denominada funcion lambda, funcion anonima o funcion literal es una subrutina definida que no esta enlazada a un decodificador.</p>
 			    <p> Una expresión lambda es una función anónima. Una función que no tiene nombre y no pertenece a ninguna clase. </p>
+			    <p> Es una subrutina definida que no está enlazada a un identificador. </p>
+			    <img src="" alt="">
+
                     </div>
                   </div>
                 </div>
