--- a/ConsultGrupo4.html
+++ b/ConsultGrupo4.html
@@ -65,7 +65,7 @@ https://templatemo.com/tm-529-ramayana
 			    <p> En el ambito de la programacion, una expresion Lambda, tambien denominada funcion lambda, funcion anonima o funcion literal es una subrutina definida que no esta enlazada a un decodificador.</p>
 			    <p> Una expresión lambda es una función anónima. Una función que no tiene nombre y no pertenece a ninguna clase. </p>
 			    <p> Es una subrutina definida que no está enlazada a un identificador. </p>
-			    <img src="" alt="">
+			    <img src="assets/images/Uno.jpg" alt="">
 
                     </div>
                   </div>
