--- a/ConsultGrupo4.html
+++ b/ConsultGrupo4.html
@@ -49,6 +49,7 @@ https://templatemo.com/tm-529-ramayana
                   <div class="col-md-12">
                     <h1>Consultas y Exposiciones</h1>
                     <p>En este espacio encontraras todo hacerca de las colcultas y exposiciones hechas por el grupo #4</p>
+			  <img src="assets/images/InicioConsulta.jpg" alt="">
                   </div>
                 </div>
               </div>
@@ -65,7 +66,16 @@ https://templatemo.com/tm-529-ramayana
 			    <p> En el ambito de la programacion, una expresion Lambda, tambien denominada funcion lambda, funcion anonima o funcion literal es una subrutina definida que no esta enlazada a un decodificador.</p>
 			    <p> Una expresión lambda es una función anónima. Una función que no tiene nombre y no pertenece a ninguna clase. </p>
 			    <p> Es una subrutina definida que no está enlazada a un identificador. </p>
-			    <img src="assets/images/Uno.png" alt="">
+			    <img src="assets/images/Uno.jpg" alt="">
+			    <img src="assets/images/Dos.jpg" alt="">
+			    <img src="assets/images/Tres.jpg" alt="">
+			    <img src="assets/images/Cuatro.jpg" alt="">
+			    <img src="assets/images/Cinco.jpg" alt="">
+			    <img src="assets/images/Seis.jpg" alt="">
+			    <img src="assets/images/Siete.jpg" alt="">
+			    <img src="assets/images/Ocho.jpg" alt="">
+			    <img src="assets/images/Nueve.jpg" alt="">
+			    <img src="assets/images/Diez.jpg" alt="">
 
                     </div>
                   </div>
