--- a/ConsultGrupo4.html
+++ b/ConsultGrupo4.html
@@ -66,16 +66,16 @@ https://templatemo.com/tm-529-ramayana
 			    <p> En el ambito de la programacion, una expresion Lambda, tambien denominada funcion lambda, funcion anonima o funcion literal es una subrutina definida que no esta enlazada a un decodificador.</p>
 			    <p> Una expresión lambda es una función anónima. Una función que no tiene nombre y no pertenece a ninguna clase. </p>
 			    <p> Es una subrutina definida que no está enlazada a un identificador. </p>
-			    <img src="assets/images/Uno.jpg" alt="">
-			    <img src="assets/images/Dos.jpg" alt="">
-			    <img src="assets/images/Tres.jpg" alt="">
-			    <img src="assets/images/Cuatro.jpg" alt="">
-			    <img src="assets/images/Cinco.jpg" alt="">
-			    <img src="assets/images/Seis.jpg" alt="">
-			    <img src="assets/images/Siete.jpg" alt="">
-			    <img src="assets/images/Ocho.jpg" alt="">
-			    <img src="assets/images/Nueve.jpg" alt="">
-			    <img src="assets/images/Diez.jpg" alt="">
+			    <img src="assets/images/Uno.jpg" width="100" height="100" alt="">
+			    <img src="assets/images/Dos.jpg" width="100" height="100" alt="">
+			    <img src="assets/images/Tres.jpg" width="100" height="100" alt="">
+			    <img src="assets/images/Cuatro.jpg" width="100" height="100" alt="">
+			    <img src="assets/images/Cinco.jpg" width="100" height="100" alt="">
+			    <img src="assets/images/Seis.jpg" width="100" height="100" alt="">
+			    <img src="assets/images/Siete.jpg" width="100" height="100" alt="">
+			    <img src="assets/images/Ocho.jpg" width="100" height="100" alt="">
+			    <img src="assets/images/Nueve.jpg" width="100" height="100" alt="">
+			    <img src="assets/images/Diez.jpg" width="100" height="100" alt="">
 
                     </div>
                   </div>
