--- a/ConsultGrupo4.html
+++ b/ConsultGrupo4.html
@@ -66,20 +66,20 @@ https://templatemo.com/tm-529-ramayana
 			    <p> En el ambito de la programacion, una expresion Lambda, tambien denominada funcion lambda, funcion anonima o funcion literal es una subrutina definida que no esta enlazada a un decodificador.
 			    Una expresión lambda es una función anónima. Una función que no tiene nombre y no pertenece a ninguna clase, Es una subrutina definida que no está enlazada a un identificador.</p>
 			    <br><br>
-			    <img src="assets/images/Uno.jpg"  height="100" width="100" alt="">
-			    <img src="assets/images/Dos.jpg" height="100" width="100" alt="">
-			    <img src="assets/images/Tres.jpg" height="100" width="100" alt="">
-			    <img src="assets/images/Cuatro.jpg" height="100" width="100" alt="">
-			    <img src="assets/images/Cinco.jpg" height="100" width="100" alt="">
-			    <img src="assets/images/Seis.jpg" height="100" width="100" alt="">
-			    <img src="assets/images/Siete.jpg" height="100" width="100" alt="">
-			    <img src="assets/images/Ocho.jpg" height="100" width="100" alt="">
-			    <img src="assets/images/Nueve.jpg" height="100" width="100" alt="">
-			    <img src="assets/images/Diez.jpg" height="100" width="100" alt="">
+			    <img src="assets/images/Uno.jpg"  alt="">
+			    <img src="assets/images/Dos.jpg" alt="">
+			    <img src="assets/images/Tres.jpg"  alt="">
+			    <img src="assets/images/Cuatro.jpg" alt="">
+			    <img src="assets/images/Cinco.jpg"  alt="">
+			    <img src="assets/images/Seis.jpg" alt="">
+			    <img src="assets/images/Siete.jpg"  alt="">
+			    <img src="assets/images/Ocho.jpg" alt="">
+			    <img src="assets/images/Nueve.jpg"  alt="">
+			    <img src="assets/images/Diez.jpg"  alt="">
 			    
 			    <h2> Para una mayor explicacion vea el siguiente video: </h2>
 			    
-			    <a href="https://www.youtube.com/watch?v=DvE-J-jgB_A&t=3s">Estamos en Facebook</a>
+			    <a href="https://www.youtube.com/watch?v=DvE-J-jgB_A&t=3s"> Expresiones Lambda </a>
 
                     </div>
                   </div>
