--- a/ConsultGrupo4.html
+++ b/ConsultGrupo4.html
@@ -68,15 +68,15 @@ https://templatemo.com/tm-529-ramayana
 			    <br><br>
 			    
 			    <img src="assets/images/Uno.jpg" height="100px" width="100px" alt="">
-			    <img src="assets/images/Dos.jpg"  alt="">
-			    <img src="assets/images/Tres.jpg"  alt="">
-			    <img src="assets/images/Cuatro.jpg"  alt="">
-			    <img src="assets/images/Cinco.jpg"  alt="">
-			    <img src="assets/images/Seis.jpg"  alt="">
-			    <img src="assets/images/Siete.jpg"  alt="">
-			    <img src="assets/images/Ocho.jpg" alt="">
-			    <img src="assets/images/Nueve.jpg"  alt="">
-			    <img src="assets/images/Diez.jpg"  alt="">
+			    <img src="assets/images/Dos.jpg" height="100px" width="100px" alt="">
+			    <img src="assets/images/Tres.jpg" height="100px" width="100px" alt="">
+			    <img src="assets/images/Cuatro.jpg" height="100px" width="100px" alt="">
+			    <img src="assets/images/Cinco.jpg" height="100px" width="100px" alt="">
+			    <img src="assets/images/Seis.jpg" height="100px" width="100px" alt="">
+			    <img src="assets/images/Siete.jpg" height="100px" width="100px" alt="">
+			    <img src="assets/images/Ocho.jpg" height="100px" width="100px" alt="">
+			    <img src="assets/images/Nueve.jpg" height="100px" width="100px" alt="">
+			    <img src="assets/images/Diez.jpg" height="100px" width="100px" alt="">
 			    <br>
 			    <h2> Para una mayor explicacion vea el siguiente video: </h2>
 			    
