--- a/ConsultGrupo1.html
+++ b/ConsultGrupo1.html
@@ -73,7 +73,7 @@ https://templatemo.com/tm-529-ramayana
            
               
             <!-- Contact Form -->
-            <section class="contact-form">
+          <!--  <section class="contact-form">
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-6">
