--- a/ConsultGrupo1.html
+++ b/ConsultGrupo1.html
@@ -37,7 +37,16 @@
                 <a href="index.html">CONSULTAS GRUPO 1 </a>
               </div>
             </header>
-
+		  
+		<li class="nav-item active dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Consultas</a>
+							<div class="dropdown-menu" aria-labelledby="dropdown-a">
+								<a class="dropdown-item" href="Consulta_Grupo1.html">Grupo 1</a>
+								<a class="dropdown-item" href="Consulta_Grupo2.html">Grupo 2</a>
+								<a class="dropdown-item" href="Consulta_Grupo3.html">Grupo 3</a>
+								<a class="dropdown-item" href="Consulta_Grupo4.html">Grupo 4</a>
+							</div>
+						</li>
           
             <!-- Simple Post -->
             <section class="simple-post">
