--- a/Par1Grup1.html
+++ b/Par1Grup1.html
@@ -49,7 +49,10 @@ https://templatemo.com/tm-529-ramayana
                   <div class="col-md-12">
                     <h1>Paralelismo e Hilos en Java</h1>
                     <iframe width="1124" height="634" src="https://www.youtube.com/embed/UyYv6OfCEKo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  </div>
+                 	
+			  <h1>Sincronizacion Java CandadoRW</h1>
+			  <iframe width="754" height="425" src="https://www.youtube.com/embed/U78PUTafrOI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		 </div>
                 </div>
               </div>
             </div>
