--- a/Par1Grup1.html
+++ b/Par1Grup1.html
@@ -144,7 +144,7 @@ https://templatemo.com/tm-529-ramayana
               <div class="owl-carousel owl-theme">
                 <a href="#">
                   <div class="featured-item">
-                    <img src="assets/images/featured_post_01.jpg" alt="featured one">
+                   <!--   <img src="assets/images/featured_post_01.jpg" alt="featured one"> -->
                     <p>Aliquam egestas convallis eros sed gravida. Curabitur consequat sit.</p>
                   </div>
                 </a>
