--- a/Par1Grup1.html
+++ b/Par1Grup1.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-529-ramayana
             <!-- Header -->
             <header id="header">
               <div class="logo">
-                <a href="index.html">HILOS Y SINCRONIZACION</a>
+                <a href="index.html">Parcial #1</a>
               </div>
             </header>
 
@@ -137,14 +137,14 @@ https://templatemo.com/tm-529-ramayana
 
 
             <!-- Featured Posts -->
-            <div class="featured-posts">
+           <!--    <div class="featured-posts">
               <div class="heading">
                 <h2>Featured Posts</h2>
               </div>
               <div class="owl-carousel owl-theme">
                 <a href="#">
                   <div class="featured-item">
-                   <!--   <img src="assets/images/featured_post_01.jpg" alt="featured one"> -->
+                   <img src="assets/images/featured_post_01.jpg" alt="featured one">
                     <p>Aliquam egestas convallis eros sed gravida. Curabitur consequat sit.</p>
                   </div>
                 </a>
@@ -161,7 +161,7 @@ https://templatemo.com/tm-529-ramayana
                   </div>
                 </a>
               </div>
-            </div>
+            </div> -->
 
             <!-- Footer -->
             <footer id="footer">
