--- a/Par1Grup1.html
+++ b/Par1Grup1.html
@@ -164,10 +164,10 @@ https://templatemo.com/tm-529-ramayana
             </div> -->
 
             <!-- Footer -->
-           <!-- <footer id="footer">
+           <footer id="footer">
               <p class="copyright">Copyright &copy; 2020 Company Name
               <br>Designed by <a rel="nofollow" href="https://www.facebook.com/templatemo">Template Mo</a></p>
-            </footer>-->
+            </footer>
             
           </div>
         </div>
