--- a/ConsultGrupo1.html
+++ b/ConsultGrupo1.html
@@ -50,7 +50,7 @@
         </div>
       </div>
 	    
-      <div class="col-md-4">
+     <!-- <div class="col-md-4">
         <div class="service-item second-item">
           <div class="icon"></div>
           <h4>Bootstrap 4</h4>
@@ -88,7 +88,8 @@
           <h4>Spread a word</h4>
           <p>Please tell your friends about our website. This is very helpful.</p>
         </div>
-      </div>
+      </div> -->
+
     </div>
   </div>
 </section>                    	  
