--- a/ConsultGrupo1.html
+++ b/ConsultGrupo1.html
@@ -46,7 +46,7 @@
         <div class="service-item first-item">
          <img src="Contenido/GRUPO 1/IMAGENES/MAP REDUCE.jpg" alt="featured one">
           <h4>MAP REDUCE</h4>
-          <p><a rel="nofollow" href="Contenido/GRUPO 1/diapositivas/Mapreduce (1).pptx">CONSULTA #1</a></p>
+          <p><a rel="nofollow" href="Contenido/GRUPO 1/diapositivas/Mapreduce (1).pptx"> DESCARGAR CONSULTA</a></p>
         </div>
       </div>
 	    
