--- a/ConsultGrupo1.html
+++ b/ConsultGrupo1.html
@@ -48,6 +48,10 @@
           <h4>MAP REDUCE</h4>
           <p><a rel="nofollow" href="Contenido/GRUPO 1/diapositivas/Mapreduce (1).pptx"> DESCARGAR CONSULTA</a></p>
 	  <p><a rel="nofollow" href="Contenido/GRUPO 1/diapositivas/mapreduce.html"> LEER CONSULTA</a></p>
+		
+	  <p><a rel="nofollow" href="Contenido/GRUPO 1/diapositivas/mapreduce.html"> LEER CONSULTA2</a></p>
+	
+		
         </div>
       </div>
 	    
