--- a/ConsultGrupo1.html
+++ b/ConsultGrupo1.html
@@ -47,9 +47,7 @@
          <img src="Contenido/GRUPO 1/IMAGENES/MAP REDUCE.jpg" alt="featured one">
           <h4>MAP REDUCE</h4>
           <p><a rel="nofollow" href="Contenido/GRUPO 1/diapositivas/Mapreduce (1).pptx"> DESCARGAR CONSULTA</a></p>
-	  <p><a rel="nofollow" href="Contenido/GRUPO 1/diapositivas/mapreduce.html"> LEER CONSULTA</a></p>
-		
-	  <p><a rel="nofollow" href="Contenido/GRUPO 1/diapositivas/mapreduce.html"> LEER CONSULTA2</a></p>
+	  <p><a rel="nofollow" href="mapreduce.html"> LEER CONSULTA</a></p>
 	
 		
         </div>
