--- a/mapreduce.html
+++ b/mapreduce.html
@@ -66,11 +66,11 @@ https://templatemo.com/tm-529-ramayana
 					  <h2><strong>JobTracker: Servidor maestro de MapReduce</strong></h2>
                       <p align="justify " style="font-size: 115%">
 						 <ul>
-							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	&nbsp&nbsp Capacidad para manejar metadatos de trabajos</li>
-							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	&nbsp&nbsp Decide sobre la programació </li>
-							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	&nbsp&nbsp Hay exactamente un JobTracker por cluster.</li>
-							 <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	&nbsp&nbsp HRecibe peticiones de tareas enviadas por el cliente..</li>
-							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	&nbsp&nbsp Programa y monitoriza los trabajos MapReduce con TaskTrackers.</li>
+							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	Capacidad para manejar metadatos de trabajos</li>
+							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	Decide sobre la programació </li>
+							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	Hay exactamente un JobTracker por cluster.</li>
+							 <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	Recibe peticiones de tareas enviadas por el cliente..</li>
+							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	Programa y monitoriza los trabajos MapReduce con TaskTrackers.</li>
 					 	 </ul>
 						<h2><strong>TaskTracker: Servidor esclavo de MapReduce</strong></h2>
                       <p align="justify " style="font-size: 115%">
