--- a/mapreduce.html
+++ b/mapreduce.html
@@ -75,10 +75,10 @@ https://templatemo.com/tm-529-ramayana
 						<h2><strong>TaskTracker: Servidor esclavo de MapReduce</strong></h2>
                       <p align="justify " style="font-size: 115%">
 						 <ul>
-							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	&nbsp&nbsp Ejecuta las solicitudes de trabajo de JobTrackers</li>
-							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	&nbsp&nbsp Obtiene el código que se ejecutará </li>
-							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	&nbsp&nbsp Aplica la configuración especifica del trabajo</li>
-							 <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	&nbsp&nbsp Comunicación con el JobTracker: Envíos de la salida, finalizar tareas, actualización de tareas, etc.</li>
+							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	Ejecuta las solicitudes de trabajo de JobTrackers</li>
+							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	Obtiene el código que se ejecutará </li>
+							  <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	Aplica la configuración especifica del trabajo</li>
+							 <li>&nbsp&nbsp&nbsp&nbsp<strong>•</strong>	Comunicación con el JobTracker: Envíos de la salida, finalizar tareas, actualización de tareas, etc.</li>
 							  
 					 	 </ul>
 					  </p>	
