--- a/Par1Grup4.html
+++ b/Par1Grup4.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-529-ramayana
                 <div class="row">
                   <div class="col-md-12">
                     <h1>Simple Page</h1>
-                    <p><strong>Ramayana</strong> is free Bootstrap 4 CSS template from templatemo website. You can feel free to use it. Donec a scelerisque massa. Aliquam non iaculis quam. Duis arcu turpis, tincidunt id convallis nec, pretium non sem. Fusce non vehicula nibh. Nunc interdum libero non tincidunt rutrum. Nunc at feugiat quam, sed ullamcorper felis.</p>
+                    <p><strong>Aplicaciones Distribuidas</strong> is free Bootstrap 4 CSS template from templatemo website. You can feel free to use it. Donec a scelerisque massa. Aliquam non iaculis quam. Duis arcu turpis, tincidunt id convallis nec, pretium non sem. Fusce non vehicula nibh. Nunc interdum libero non tincidunt rutrum. Nunc at feugiat quam, sed ullamcorper felis.</p>
                   </div>
                 </div>
               </div>
