--- a/Par1Grup4.html
+++ b/Par1Grup4.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-529-ramayana
                 <div class="row">
                   <div class="col-md-12">
                     <h1>Java Streams</h1>
-                    <p><strong>Aplicaciones Distribuidas</strong> is free Bootstrap 4 CSS template from templatemo website. You can feel free to use it. Donec a scelerisque massa. Aliquam non iaculis quam. Duis arcu turpis, tincidunt id convallis nec, pretium non sem. Fusce non vehicula nibh. Nunc interdum libero non tincidunt rutrum. Nunc at feugiat quam, sed ullamcorper felis.</p>
+                    <p><strong>Java Streams</strong> Las Java Streams son lo que técnicamente, en programación funcional, se llama mónadas, que puesto de manera simple, son un tipo de objeto que contiene una serie de datos y que puede ser combinado en un flujo de procesamiento tipo pipeline: los datos pasan por una serie de procesos que piden transformarlos en cada paso, emitiendo nuevos datos, hasta lograr un dato o serie de datos final.</p>
                   </div>
                 </div>
               </div>
@@ -59,7 +59,7 @@ https://templatemo.com/tm-529-ramayana
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-12">
-                    <img src="assets/images/simple-post.jpg" alt="">
+                    <img src="images/js1.jpg" alt="">
                     <div class="down-content">
                       <p>Mauris aliquam ipsum nibh, id scelerisque leo congue vel. Vivamus ornare, eros et ornare consectetur, ipsum ipsum sollicitudin libero, at condimentum risus nulla non enim. Quisque sodales vestibulum arcu porttitor finibus. Phasellus dictum nisl id augue ornare, vel interdum nibh mollis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
                       <p>Phasellus vestibulum venenatis interdum. Praesent augue massa, tincidunt eget dignissim a, scelerisque vitae ante. Curabitur a arcu tellus. Donec et massa at dolor condimentum ornare nec non lorem. Maecenas non egestas metus, sed ultricies lectus. Aliquam sit amet gravida tellus. Phasellus id erat nec mi ullamcorper viverra. Quisque vitae pharetra sem. Maecenas sit amet velit ultrices, malesuada quam id, porta nisl. Cras scelerisque ex ut bibendum egestas.</p>
