--- a/Par1Grup4.html
+++ b/Par1Grup4.html
@@ -89,7 +89,7 @@ https://templatemo.com/tm-529-ramayana
               </form>
             </section>
               
-          <!-- Menu -->
+          <!-- Menu 
             <nav id="menu">
               <ul>
                 <li><a href="index.html"> PAGINA PRINCIPAL</a></li>
@@ -138,8 +138,8 @@ https://templatemo.com/tm-529-ramayana
               </ul>
             </nav>
 
-
-            <!-- Featured Posts -->
+--> 
+            <!-- Featured Posts 
             <div class="featured-posts">
               <div class="heading">
                 <h2>Featured Posts</h2>
@@ -164,14 +164,14 @@ https://templatemo.com/tm-529-ramayana
                   </div>
                 </a>
               </div>
-            </div>
+            </div> --> 
 
-            <!-- Footer -->
+            <!-- Footer 
             <footer id="footer">
               <p class="copyright">Copyright &copy; 2020 Company Name
               <br>Designed by <a rel="nofollow" href="https://www.facebook.com/templatemo">Template Mo</a></p>
             </footer>
-            
+            -->
           </div>
         </div>
 
