--- a/Par1Grup4.html
+++ b/Par1Grup4.html
@@ -61,6 +61,7 @@ https://templatemo.com/tm-529-ramayana
                   <div class="col-md-12">
                     <img src="assets/images/js1.jpg" >
                     <div class="down-content">
+			    <br></br>
 			    <p>Un Stream, entonces, generalmente contiene una serie de elementos, que puede generarse, por ejemplo, a partir de una colección:</p>
 			    <ul>
   				<li>Los Stream tienen operaciones intermedias, que devuelven una nueva Stream transformada, que se puede seguir encadenando, pero que solo se ejecutan cuando en el pipeline existe una operación terminal</li>
@@ -71,7 +72,7 @@ https://templatemo.com/tm-529-ramayana
 			<img src="assets/images/js2.jpg" >    
                      <p>Phasellus vestibulum venenatis interdum. Praesent augue massa, tincidunt eget dignissim a, scelerisque vitae ante. Curabitur a arcu tellus. Donec et massa at dolor condimentum ornare nec non lorem. Maecenas non egestas metus, sed ultricies lectus. Aliquam sit amet gravida tellus. Phasellus id erat nec mi ullamcorper viverra. Quisque vitae pharetra sem. Maecenas sit amet velit ultrices, malesuada quam id, porta nisl. Cras scelerisque ex ut bibendum egestas.</p>
 			   <div> </div>   
-			<img src="assets/images/js3.jpg" >  
+			<img src="assets/images/js3.jpg" width="250" height="250" >  
                     </div>
                   </div>
                 </div>
