--- a/Par1Grup4.html
+++ b/Par1Grup4.html
@@ -70,8 +70,10 @@ https://templatemo.com/tm-529-ramayana
 			   </ul>
 			<div> </div>   
 			<img src="assets/images/js2.jpg" >    
-                     <p>Phasellus vestibulum venenatis interdum. Praesent augue massa, tincidunt eget dignissim a, scelerisque vitae ante. Curabitur a arcu tellus. Donec et massa at dolor condimentum ornare nec non lorem. Maecenas non egestas metus, sed ultricies lectus. Aliquam sit amet gravida tellus. Phasellus id erat nec mi ullamcorper viverra. Quisque vitae pharetra sem. Maecenas sit amet velit ultrices, malesuada quam id, porta nisl. Cras scelerisque ex ut bibendum egestas.</p>
-			   <div> </div>   
+			   <br></br>
+                      <p><strong>Operaciones Intermedias y Terminales:</strong></p>
+			<p>Las operaciones intermedias son aquellas que devuelven un Stream transformada y las terminales cierran el pipeline. </p>
+                     <div>  </div>  
 			<img src="assets/images/js3.jpg" width="20" height="25" >  
                     </div>
                   </div>
