--- a/Par1Grup4.html
+++ b/Par1Grup4.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-529-ramayana
                       <p><strong>Operaciones Intermedias y Terminales:</strong></p>
 			<p>Las operaciones intermedias son aquellas que devuelven un Stream transformada y las terminales cierran el pipeline. </p>
                      <div>  </div>  
-			<img src="assets/images/js3.jpg"  >  
+			<img src="assets/images/js3.jpg" width="100" height="300" >  
                     </div>
                   </div>
                 </div>
