--- a/Par1Grup4.html
+++ b/Par1Grup4.html
@@ -69,12 +69,22 @@ https://templatemo.com/tm-529-ramayana
  				 
 			   </ul>
 			<div> </div>   
-			<img src="assets/images/js2.jpg" width="100" height="300">    
+			<img src="assets/images/js2.jpg" width="80" height="300">    
 			   <br></br>
                       <p><strong>Operaciones Intermedias y Terminales:</strong></p>
 			<p>Las operaciones intermedias son aquellas que devuelven un Stream transformada y las terminales cierran el pipeline. </p>
                      <div>  </div>  
 			<img src="assets/images/js3.jpg" width="100" height="300" >  
+			<br></br>
+		      <p><strong>Nota:</strong></p>
+		      <ul>
+ 			 <li>Filter(P) (Operación Intermedia)</li>
+  			<li>Map(F) (Operación Intermedia)</li>
+  			<li>ForEach(A) (Operación Terminal)</li>
+ 			 <li>Sorted() (Operación Intermedia)</li>
+			 <li>Reduce(I, O) (Operación Terminal)</li>
+			 <li>Collect(C) (Operación Terminal)</li>
+			</ul>
                     </div>
                   </div>
                 </div>
