--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-529-ramayana
             <!-- Header -->
             <header id="header">
               <div class="logo">
-                <a href="index.html">Java Stream Paralelas</a>
+                <a href="index.html">JAVA STREAM PARALELAS </a>
               </div>
             </header>
 
@@ -47,8 +47,9 @@ https://templatemo.com/tm-529-ramayana
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-12">
-                    <h1>Simple Page</h1>
-                    <p><strong>Ramayana</strong> is free Bootstrap 4 CSS template from templatemo website. You can feel free to use it. Donec a scelerisque massa. Aliquam non iaculis quam. Duis arcu turpis, tincidunt id convallis nec, pretium non sem. Fusce non vehicula nibh. Nunc interdum libero non tincidunt rutrum. Nunc at feugiat quam, sed ullamcorper felis.</p>
+                    <h1>INTRODUCCIÓN</h1>
+                    <p> El concepto de Java Parallel Stream es un concepto sencillo de entender . En muchas ocasiones podemos tener un flujo de trabajo que necesitemos mejorar su rendimiento permitiendo su ejecución en paralelo a través de varios Threads . 
+			Esto es algo que dependiendo del código del programa hacerlo sin utilizar streams es complicado.</p>
                   </div>
                 </div>
               </div>
