--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -61,7 +61,8 @@ https://templatemo.com/tm-529-ramayana
                 <div class="row">
                   <div class="col-md-12">
                     <img src="assets/images/EjerciciosGrupo3.jpg" alt="">
-			  
+			  <p> Acabamos de construir un sencillo bucle for en el cual invocamos al método duplicar. 
+			Lo curioso de este método es que pone el thread a dormir durante un segundo.</p>
                     <div class="down-content">
                       
                     </div>
