--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -63,6 +63,7 @@ https://templatemo.com/tm-529-ramayana
                     <img src="assets/images/EjerciciosGrupo3.jpg" alt="">
 			  <p> Acabamos de construir un sencillo bucle for en el cual invocamos al método duplicar. 
 			Lo curioso de este método es que pone el thread a dormir durante un segundo.</p>
+			  <img src="assets/images/EjemploGrupo3.1.jpg" alt="">
                     <div class="down-content">
                       
                     </div>
