--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -64,6 +64,9 @@ https://templatemo.com/tm-529-ramayana
 			  <p> Acabamos de construir un sencillo bucle for en el cual invocamos al método duplicar. 
 			Lo curioso de este método es que pone el thread a dormir durante un segundo.</p>
 			  <img src="assets/images/EjemploGrupo3.1.jpg" alt="">
+			  <br>
+			  <p>Por lo tanto si realizamos 10 iteraciones el bucle tardará unos 10 segundos en ejecutarse.
+				  Veamos el resultado por la consola:</p>
 			  
                     <div class="down-content">
                       
