--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -67,6 +67,7 @@ https://templatemo.com/tm-529-ramayana
 			  <br>
 			  <p>Por lo tanto si realizamos 10 iteraciones el bucle tardará unos 10 segundos en ejecutarse.
 				  Veamos el resultado por la consola:</p>
+			  <img src="assets/images/EjemploGrupo3.2.jpg" alt="">
 			  
                     <div class="down-content">
                       
