--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -70,6 +70,11 @@ https://templatemo.com/tm-529-ramayana
 			  <br>
 			  <img src="assets/images/EjemploGrupo3.2.jpg" alt="">
 			  <br>
+			  <h1>Java Parallel Stream y sus ventajas</h1>
+			  <p> Sin embargo es aquí donde si podemos utilizar de una forma sencilla la programación en paralelo y modificar el número de Threads que se encargan de procesar este Stream.</p>
+			  <br>
+			  <img src="assets/images/EjemploGrupo3.3.jpg" alt="">
+			  <br>
 			  
                     <div class="down-content">
                       
