--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -76,6 +76,8 @@ https://templatemo.com/tm-529-ramayana
 			  <img src="assets/images/EjemploGrupo3.3.jpg" alt="">  
 			  <br>
 			  <p><video src="assets/images/tutorial.mp4" width="640" height="480"></video></p>
+			  <br>
+			  <img src="assets/images/12.jpg" alt="">
 			  
                     <div class="down-content">
                       
