--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -75,7 +75,7 @@ https://templatemo.com/tm-529-ramayana
 			  <br>
 			  <img src="assets/images/EjemploGrupo3.3.jpg" alt="">  
 			  <br>
-			  <p><video src="assets/images/tutorial.mp4" width="640" height="480"></video></p>
+			  <h3>Video</h3><video src="assets/images/tutorial.mp4" width="640" height="480"></video>
 			  <br>
 			  <img src="assets/images/12.jpg" alt="">
 			  
