--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -75,9 +75,8 @@ https://templatemo.com/tm-529-ramayana
 			  <br>
 			  <img src="assets/images/EjemploGrupo3.3.jpg" alt="">  
 			  <br>
-			  <h3>Video</h3><video src="assets/images/tutorial.mp4" width="640" height="480"></video>
-			  <br>
-			  <img src="assets/images/12.jpg" alt="">
+			  < iframe  width = " 1124 " height = " 634 " src = " https://www.youtube.com/watch?v=9hGb9k5I6fA&t=41s " frameborder = " 0 " allow = " acelerómetro;
+					auto-reproducción; portapapeles de escritura; medios encriptados; giroscopio; imagen en imagen " allowfullscreen > </ iframe >
 			  <br>
 			  
                     <div class="down-content">
