--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -75,8 +75,8 @@ https://templatemo.com/tm-529-ramayana
 			  <br>
 			  <img src="assets/images/EjemploGrupo3.3.jpg" alt="">  
 			  <br>
-			  < iframe  width = " 1124 " height = " 634 " src = " https://www.youtube.com/watch?v=9hGb9k5I6fA&t=41s " frameborder = " 0 " allow = " acelerómetro;
-					auto-reproducción; portapapeles de escritura; medios encriptados; giroscopio; imagen en imagen " allowfullscreen > </ iframe >
+			   <iframe width="560" height="315" src="https://www.youtube.com/embed/9hGb9k5I6fA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+				encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			  <br>
 			  <br>
 			  
