--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -76,7 +76,7 @@ https://templatemo.com/tm-529-ramayana
 			  <br>
 			  <img src="assets/images/EjemploGrupo3.3.jpg" alt="">  
 			  <br>
-			  <p> Para ello nos es suficiente con modificar la siguiente linea y añadir el método parallels para que java lance un conjunto de hilos para realizar la tarea </p>
+			  <p> Para ello nos es suficiente con modificar la siguiente linea y añadir el método parallels para que java lance un conjunto de hilos para realizar la tarea: </p>
 			  <br>
 			  <img src="assets/images/EjemploGrupo3.4.jpg" alt=""> 
 			  <br>
