--- a/Par1Grup3.html
+++ b/Par1Grup3.html
@@ -80,6 +80,11 @@ https://templatemo.com/tm-529-ramayana
 			  <br>
 			  <img src="assets/images/EjemploGrupo3.4.jpg" alt=""> 
 			  <br>
+			  <p> El resultado mejora claramente: <p>
+			  <br>
+			  <img src="assets/images/EjemploGrupo3.5.jpg" alt=""> 
+			  <br>
+			  <br>
 			   <iframe width="560" height="315" src="https://www.youtube.com/embed/9hGb9k5I6fA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
 				encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			  <br>
