--- a/ConsultGrupo3.html
+++ b/ConsultGrupo3.html
@@ -47,8 +47,9 @@ https://templatemo.com/tm-529-ramayana
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-12">
-                    <h1>Simple Page</h1>
-                    <p><strong>Ramayana</strong> is free Bootstrap 4 CSS template from templatemo website. You can feel free to use it. Donec a scelerisque massa. Aliquam non iaculis quam. Duis arcu turpis, tincidunt id convallis nec, pretium non sem. Fusce non vehicula nibh. Nunc interdum libero non tincidunt rutrum. Nunc at feugiat quam, sed ullamcorper felis.</p>
+                    <h1>Consultas y Exposiciones</h1>
+                    <p>Aqui encontraras todas las exposiciones y consultas hechas por el grupo 3 conformado por: Vanessa Paucar, Juan Carlos Morocho, Diego Flores.</p>
+		    <p> Estas consultas ya fueron expuestas en clase y revisadas por el Ingeniero </p>
                   </div>
                 </div>
               </div>
