--- a/ConsultGrupo3.html
+++ b/ConsultGrupo3.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-529-ramayana
             <!-- Header -->
             <header id="header">
               <div class="logo">
-                <a href="index.html">Ramayana</a>
+                <a href="index.html">Consultas</a>
               </div>
             </header>
 
@@ -50,6 +50,7 @@ https://templatemo.com/tm-529-ramayana
                     <h1>Consultas y Exposiciones</h1>
                     <p>Aqui encontraras todas las exposiciones y consultas hechas por el grupo 3 conformado por: Vanessa Paucar, Juan Carlos Morocho, Diego Flores.</p>
 		    <p> Estas consultas ya fueron expuestas en clase y revisadas por el Ingeniero </p>
+			  <br>
                   </div>
                 </div>
               </div>
