--- a/ConsultGrupo4.html
+++ b/ConsultGrupo4.html
@@ -46,7 +46,20 @@
                   <div class="col-md-12">
                     <h1>Consultas y Exposiciones</h1>
                     <p>En este espacio encontraras todo hacerca de las colcultas y exposiciones hechas por el grupo #4</p>
-			  <img src="assets/images/InicioConsulta.jpg" alt="">
+			  <img src="assets/images/Grupo3-C1.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C2.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C3.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C4.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C5.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C6.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C7.jpg" alt="">
+			  <br>
                   </div>
                 </div>
               </div>
