--- a/ConsultGrupo3.html
+++ b/ConsultGrupo3.html
@@ -50,8 +50,24 @@ https://templatemo.com/tm-529-ramayana
                     <h1>Consultas y Exposiciones</h1>
                     <p>Aqui encontraras todas las exposiciones y consultas hechas por el grupo 3 conformado por: Vanessa Paucar, Juan Carlos Morocho, Diego Flores.</p>
 		    <p> Estas consultas ya fueron expuestas en clase y revisadas por el Ingeniero </p>
+			  <p>En este espacio encontraras todo hacerca de las colcultas y exposiciones hechas por el grupo #3</p>
+			  
+			  <img src="assets/images/Grupo3-C1.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C2.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C3.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C4.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C5.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C6.jpg" alt="">
+			  <br>
+			  <img src="assets/images/Grupo3-C7.jpg" alt="">
 			  <br>
 			  <br>
+                  </div>
                   </div>
                 </div>
               </div>
