--- a/Contenido/Grupo2/Paginas/forkjoin.html
+++ b/Contenido/Grupo2/Paginas/forkjoin.html
@@ -107,10 +107,11 @@ https://templatemo.com/tm-529-ramayana
 
 			    <h2>DE IMPLEMENTACIÓN SERIE A PARALELA</h2>
 			    <p>Nuestra implementación del algoritmo MergeSort consta de tres partes:
-				• El método mergesort(), que ordena cada sublista recursivamente aplicando el ordenamiento por mezcla.
-				• El método merge(), que mezcla dos sublistas ordenadas en una lista, ordenada también.
-				• El método sort(), que invoca una sola vez al método mergesort(), creando previamente un array auxiliar del
-				mismo tamaño que la lista a ordenar.
+				<ul>
+					<li>El método mergesort(), que ordena cada sublista recursivamente aplicando el ordenamiento por mezcla.</li>
+					<li>El método merge(), que mezcla dos sublistas ordenadas en una lista, ordenada también.</li>
+					<li>El método sort(), que invoca una sola vez al método mergesort(), creando previamente un array auxiliar del mismo tamaño que la lista a ordenar.</li>
+				<ul/>
 			    </p>
 
 			    <h2>¿CÓMO FUNCIONA EL FRAMEWORK FORK / JOIN?</h2>
@@ -118,10 +119,10 @@ https://templatemo.com/tm-529-ramayana
 				considerarse un modelo de simultaneidad, a menudo se confunde con el concepto de simultaneidad en sí.
 				La concurrencia es la ejecución de dos o más tareas en períodos de tiempo superpuestos que no son necesariamente
 				simultáneos.
-				• Concurrente: 2 colas, 1 máquina expendedora
-
-				• Paralelo: 2 colas, 2 máquinas expendedoras
-
+			    	<ul>
+					<li>Concurrente: 2 colas, 1 máquina expendedora</li>
+					<li>Paralelo: 2 colas, 2 máquinas expendedoras</li>
+			    </ul>
 				El framework fork / join fue diseñado para acelerar la ejecución de tareas que se pueden dividir en otras
 				subtareas más pequeñas, ejecutándolas en paralelo y luego combinando sus resultados para obtener una sola.
 				Por esta razón, las subtareas deben ser independientes entre sí y las operaciones deben ser apátridas, por lo
